k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-invite-backend
  namespace: backend
  labels:
    app: open-invite
    component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: open-invite
      component: backend
  template:
    metadata:
      labels:
        app: open-invite
        component: backend
    spec:
      containers:
        - name: backend
          image: 094840069693.dkr.ecr.us-east-1.amazonaws.com/open-invite/backend:latest
          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: open-invite-backend
  namespace: backend
  labels:
    app: open-invite
    component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: open-invite
    component: backend
